<resources>
    <string name="app_name">Score</string>
    <string name="action_settings">Settings</string>

    <!--Labels-->
    <string name="TmA">Team A</string>
    <string name="TmB">Team B</string>
    <string name="pnt">Points</string>

    <!--Numbers-->
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>

</resources>
