<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.cherry.score.Main"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="576dp"
        android:layout_height="295dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/LL_lbl_ttl_Tm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_t_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TmA"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/lbl_t_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/TmB"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/LL_lbl_sc_tm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_sco_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_0"
                android:textAlignment="center"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/lbl_sco_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_0"
                android:textAlignment="center"
                android:textSize="36sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/LL_tm_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_t_A"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/pnt" />

            <Button
                android:id="@+id/btn_t_B"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:text="@string/pnt" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:id="@+id/LL_num_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/btn_n1"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:textOn="@string/number_1"
                android:textOff="@string/number_1"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_2"
                android:textOff="@string/number_2"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_3"
                android:textOff="@string/number_3"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_4"
                android:textOff="@string/number_4"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_5"
                android:textOff="@string/number_5"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_6"
                android:textOff="@string/number_6"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_7"
                android:textOff="@string/number_7"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_8"
                android:textOff="@string/number_8"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_9"
                android:textOff="@string/number_9"
                android:background="@drawable/toggle_selector"/>

            <ToggleButton
                android:id="@+id/btn_n10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/number_10"
                android:textOff="@string/number_10"
                android:background="@drawable/toggle_selector"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
